switched back to hsql

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
-#Updated at Fri Nov 16 16:18:38 EST 2012
-#Fri Nov 16 16:18:38 EST 2012
-database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://localhost\:3306/quizzojs
-database.username=root
+#Updated at Sun Nov 18 08:36:24 EST 2012
+#Sun Nov 18 08:36:24 EST 2012
+database.driverClassName=org.hsqldb.jdbcDriver
+database.url=jdbc\:hsqldb\:file\:quizzo;shutdown\=true
+database.username=sa
 database.password=
