--- a/src/test/resources/META-INF/spring/database.properties
+++ b/src/test/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
   #Updated at Sun Nov 18 08:36:24 EST 2012
 #Sun Nov 18 08:36:24 EST 2012
 database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:file=quizzo;shutdown=true
+database.url=${database.url}
 database.username=sa
 database.password=
