--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>0.1.0.BUILD-SNAPSHOT</version>
     <name>quizzo</name>
     <properties>
-        <aspectj.version>1.7.0.RC1</aspectj.version>
+        <aspectj.version>1.7.1</aspectj.version>
         <java.version>1.6</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <roo.version>1.2.2.RELEASE</roo.version>
