--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,4 @@ log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.logger.org.springframework.web.servlet=TRACE
