--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <aspectj.version>1.7.1</aspectj.version>
         <java.version>1.6</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <roo.version>1.2.2.RELEASE</roo.version>
+        <roo.version>1.2.3.RELEASE</roo.version>
         <slf4j.version>1.6.4</slf4j.version>
         <spring.version>3.2.0.RELEASE</spring.version>
 		<spring.profiles.default>development</spring.profiles.default>
@@ -90,8 +90,8 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1-b04</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
